--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,44 +1,366 @@
+.relativa {   position: relative;}
 
-.{
-    margin: 0px;
-    padding: 0px;
-}
-body{
-    background: black;
-    margin: 0 auto;
-    padding: 0 auto;
+#navcatal {width: 100%; float: right;}
+
+.titulo_pd{
+    background: url(../images/Titulo\ destacado.png) no-repeat;
+    width: 251px;
+    background-size: 100% 100%;
+    padding: 15px 0px 20px 0px;
+    float: left;
+    position: relative;
+    left: -15px;
+    overflow: hidden;}
+	.titulo_pd  strong {
+    color: #ffffff;
+    font-size: 18px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 700;
+    font-style: italic;
     width: 100%;
+    margin: 0px 0px 0px 35px;
+    float: left;
+}
+.titulo_pd div {
+    color: #ffffff;
+    font-size: 20px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 700;
+    font-style: italic;
+    width: 85%;
+    margin: 0px 0px 0px 25px;
+    float: left;
+    line-height: 23px;
+}
+.cont-nav ul li.strong {
+    float: left;
+    width: 100%;
+    border-top: 1px solid #d1d1d1;
+    border-bottom: 1px solid #d1d1d1;
+    color: #727272;
+    font-family: 'Roboto Condensed', sans-serif ;
+    font-size: 21px;
+    padding: 5px 0px;
+	font-weight:bold;
+}
+.slider-foot {
+    width:100%;
+    position: absolute;
+    bottom: -80px;
+    text-align: center;
+    z-index: 1;
+}
+.chica{ display:none;}
+
+.margin_top90{ margin-top:0px;}
+
+    #navcatal .cont-nav{width: 100%; float: left; border-bottom:0px;overflow: hidden;}
+
+    #navcatal .titulo {background-color:#B5B5B5;
+        color:#FFFFFF;
+        text-align: center;
+        float:left;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 700;
+        font-size:21px;
+        padding:7px 0px;
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
+        margin:0px;}
+
+li{list-style:none !important; }
+
+ul{    list-style-type: none !important}
+
+#acord {margin-top: 25px;}
+
+    #acord  ul {list-style-type: none;
+        display: none;
+        border:none;
+        float:left;}
+		#acord a { text-decoration: none;}
+        #acord li ul li {list-style: #fff;
+            float:left;
+            list-style:none !important;}
+        #acord  li .box {float:left;
+            width: 100%;}
+        #acord li .box h3{float:left;
+            border-bottom:1px solid #D1D1D1;
+            color: #666 !important;
+            cursor: pointer;
+            font-weight: 400;
+            text-transform:uppercase;
+            font-size: 15px;
+            float: left;
+            width: 100%;
+            overflow: hidden;
+            font-family: 'Roboto', sans-serif;
+            text-align: left;
+            margin:0px;
+            padding: 10px 0px;}
+
+        #acord  li .box h3:hover {color:#FFFFFF;
+            background-color:#EEEEEE;
+            list-style:none !important}
+        #acord  li a h4, li .box h4,li a h5, li .box h5 {width: 100%;
+            text-transform:uppercase;
+            text-align:left;
+            cursor: pointer;
+            margin: 0px 0px 0px 0px;
+            font-weight: 300;
+            color: #C5F1FF;
+            font-size: 15px;
+            font-family: 'Roboto', sans-serif;
+            float: left;
+            overflow:hidden;
+            padding: 10px 0px;
+            border-bottom:1px solid #CCC;}
+        #acord  li a h4:hover, li .box h4:hover,li a h5:hover, li .box h5:hover  {background-color: #EEEEEE; 
+            color:#FFFFFF; }
+        #acord  .sub-categoria {cursor: pointer;
+            width:90%;
+            float:left;
+            margin-left:10%;}
+        #acord .sub-sub-categoria {cursor: pointer;
+            width:90%;
+            float:left;
+            margin-left:10%;}
+        #acord  img {float:left;
+            border-radius: 10px;
+            margin-right:10px;
+            margin: 13px 0px;}
+		#acord  .mostrar {display: block;}
+		#acord  .activo {color: #900 !important;}
+		#acord h3 {color:#FFF; font-size:20px}
+		#acord h4 {color:#777!important;}
+        #acord h5 {color:#999!important;}
+
+
+        /* Body */
+
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+body {
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight:300;
 }
 
+#wrapper {
+    position: absolute;
+    margin-top: 0px;
+    margin-left: 0px;
+    z-index: 10000000;
+    padding-left:30px;
+    }
+/* Soobrescritura bootstrap */
+
+.navbar-dark .navbar-brand{
+    color:rgb(146, 30, 30);
+}
+.navbar-brand{
+    font-size: 1.75rem;
+    font-weight: 500;
+}
+.navbar-dark .navbar-nav .nav-link:hover{
+    color:rgb(146, 30, 30);
+}
+.navbar-dark .navbar-nav .nav-link:target{
+    color:rgb(146, 30, 30);
+}
+.navbar {
+    border: 0px;
+    background-image: url(../images/dark_background1.jpg);
+    background-size: cover;
+    z-index: 10;
+    min-height: 100px;
+}
+ul{
+    list-style-type: none !important;
+}
+
+li{
+    list-style-type: none !important;
+}
+
+/*Fin soobrescritura */
+
+.buscador{ width: 100%;
+    top: 10px;
+    padding: 3px 1%;
+    margin-left: 4%;
+    float: left;
+    border-radius: 5px;
+    border: 1px solid #999;
+    margin-bottom: 30px;
+    box-shadow: 2px 2px 2px #666;
+	position:relative;
+	font-size:16px;}
+
+.bs-text{ width:94%; border:0; background:none; font-family: 'Roboto', sans-serif; margin-bottom:5px;}
+
+.lupita{ width:24px;
+    height:24px;
+    background:url(../images/lupa.jpg) no-repeat;
+    border:0;
+    bottom:3px;
+    position:absolute;}
+
+/* Productos */
+
+.producto_destacado{
+    width:100%;
+    padding:10px 2%;
+    margin-bottom:30px;
+    margin-left:4%;
+    float:left;
+    background:#303030;
+    color:#FFF;
+}
+
+.producto_destacado .cont_texto_des{ width:71%;
+    float:left;
+    font-size:18px; }
+
+.producto_destacado h3{ font-family:'Roboto Condensed', sans-serif;
+    font-size:24px;
+    margin:0;
+    padding:0;
+    border-bottom:2px solid #E90523;
+    float:left;
+    width:100%;}
+
+.producto_destacado img{ width:27%;
+    float:left;
+    margin-right:2%;  }
+
+.producto_destacado .precio_des{ width:auto !important;
+    padding:3px 25px;
+    background:#FFF;
+    float:left;
+    border:2px solid #E90523;
+    border-radius:10px;
+    margin-top:5px;
+    color:#E90523;
+    font-weight:bold;
+    font-size:24px; }
+
+.producto_destacado p{margin-top:10px !important;
+    float:left;
+    width:100%;}
+
+.producto_destacado .precio_ante_des{ color:#333;
+    font-size:20px;
+    text-decoration:line-through;
+    margin-right:20px;}
+
+.catalogo .box {
+    width: 33.33%;
+    float: left;
+    padding: 0% 3.1%;
+    border-right: 1px solid #f1f1f1;
+    text-align: center;
+    position: relative;
+    margin-bottom: 20px;
+}
+.catalogo .box:nth-child(3n+0) {
+    border: none;
+}
+.catalogo .box .box-move {
+    position: relative;
+    top: 0px;
+    padding: 0% 3.1%;
+}
+.catalogo .box .box-move div {
+    overflow: hidden;
+    height: 160px;
+}
+.catalogo .box .box-move .agregar{ height:auto !important; min-height:25px; float:left;}
+.catalogo .box .box-move:hover h2 {
+color: #333;
+}
+.caja_estado{ width:100%; float:left; height:14px !important; line-height:14px; font-size:13px; color:#727272; margin:7px 0; }
+.catalogo .box h2 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 17px;
+    color: #727272;
+    text-align: center;
+    height:70px;
+    float:left;
+    overflow:hidden;
+    margin:0;
+}
+.catalogo .box .box-move .precios_general{ width:100%;  height:30px; font-size:18px; color:#CD131D; }
+.prod_bot_comprar{color:#FFF; border:0; cursor:pointer; border-radius:4px; background-color:#CD131D; font-size:15px; padding:5px 8px; font-weight:bold;}
+.cant_cat{ font-size:14px; color:#666; width:30px; border-radius:4px; border:1px solid #999; text-align:center; padding:3px 0; }
+
+
+/*formulario login*/
 .cliente-contacto{
 
     margin: 50px;
     width: 100%;
 }
 .text-upparcase.text-left{
-    color: white;
+    color: #666;
 }
 .form-group{
-    color: white;
+    color: #333;
 }
-
-
-/*formulario login*/
 
 .box-login{
     margin: 50px auto;
     width: 500px;
-    color: white;
-    border: 1px solid red;
+    color: #666;
+    border: 10px solid rgb(146, 30, 30);
     padding: 50px;
 }
 .btn-success{
     margin-top: 10px;
     background-color: red;
-    border: red;
+    border: rgb(146, 30, 30);
 }
 .btn-success:hover{
-    color: white;
-    background-color: green;
-    border: red;
+    color: #333;
+    background-color: #E90523;
+    border: rgb(146, 30, 30);
+}
+/*fin formulario */
+
+/* Media Queries */
+
+@media only screen and (max-width: 992px) {
+    .sombra-ver{ display:none;}
+    }
+
+@media only screen and (max-width: 980px) {
+    .categorias{ display:none !important;}
+    .margin_top90{ margin-top:20px;}
+    .slider-foot{ top:-35px;
+}
+@media only screen and (max-width: 820px) {
+    .catalogo .box{ width:50%}
+    .buscador{ width: 96%;
+    left: 15px;
+    padding: 3px 1%;
+    margin-left: 0%;
+    border-radius: 5px;
+    border: 1px solid #999;
+    margin-bottom: 30px;
+    box-shadow: 2px 2px 2px #666;
+    position:relative;
+    font-size:16px;
+    margin-top: 50px}
+}
+@media only screen and (max-width: 619px) {
+    #producto-detalle .box-left {
+    width:100%;
+}
+@media only screen and (max-width: 520px) {
+    .catalogo .box{ width:100%;}
+    .producto_destacado{ width:96%;}
+}
+}
 }
