--- a/css/estilo.css
+++ b/css/estilo.css
@@ -294,7 +294,7 @@ color: #333;
 }
 .catalogo .box .box-move .precios_general{ width:100%;  height:30px; font-size:18px; color:#CD131D; }
 .prod_bot_comprar{color:#FFF; border:0; cursor:pointer; border-radius:4px; background-color:#CD131D; font-size:15px; padding:5px 8px; font-weight:bold;}
-.cant_cat{ font-size:14px; color:#666; width:30px; border-radius:4px; border:1px solid #999; text-align:center; padding:3px 0; }
+
 
 
 /*formulario login*/
@@ -370,13 +370,13 @@ color: #333;
     margin-top: 10px;
     width: 100px;
     height: 40px;
-    background: red;
-    border:red;
+    background: rgb(146, 30, 30);
+    border:rgb(146, 30, 30);
     border-radius: .25rem;
 }
 .btn-guardar:hover{
-    background: green;
-    border: green;
+    background: #E90523;
+    border: #E90523;
     border-radius: .25rem;
 }
 .label-p{
@@ -386,6 +386,63 @@ color: #333;
     background:black;
 }
 
+/* Footer */
+
+footer {
+    background: url(../images/dark_background1.jpg) no-repeat;
+    width: 100%;
+    float: left;
+    height: 200px;
+    background-size:100% 100%;
+    margin-top:60px;
+}
+footer .footer .box-right {
+    float:left;
+    width: 100%;
+    margin-top:30px;
+}
+    footer .footer .box-right p {
+    color: #ffffff;
+    font-size: 18px;
+    font-family: 'Roboto Condensed', sans-serif;
+    margin: 0px;
+    font-weight: 300;
+    text-align: center;
+}
+  .box-right-pr .min-box .cod {
+    float: left;
+    color: #727272;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 14px;
+  }
+  .box-right-pr .min-box .volver {
+    float: right;
+    color: #d1d1d1;
+    font-size: 14px;
+  }
+  .box-right-pr h1 {
+    margin-top: 10px;
+    font-size: 42px;
+    color: #3a3a3a;
+    font-weight: 700;
+    line-height: 50px;
+    float: left;
+    width: 100%;
+}
+  #producto-detalle .precios_detalle{ width:100%; 
+    height:40px; 
+    color:#333333; 
+    float:left;
+    font-size:23px;
+    padding-bottom:0;  }
+    #producto-detalle .agregar{ float:left;}
+
+    .cant_cat{ font-size:14px; color:#666;
+        width:30px;
+        border-radius:4px;
+        border:1px solid #999;
+        text-align:center;
+        padding:3px 0; }
 /* Media Queries */
 
 @media only screen and (max-width: 992px) {
