--- a/css/estilo.css
+++ b/css/estilo.css
@@ -332,7 +332,7 @@ color: #333;
 }
 
 .box-login{
-   /* margin: 50px auto;*/
+/* margin: 50px auto;*/
     width: 500px;
     color: white;
     border: 10px solid rgb(146, 30, 30);
@@ -345,6 +345,11 @@ color: #333;
 label {
     color: white;
 }
+
+#errores {
+    display: block;
+}
+
 .box-registro{
     background: rgb(56, 55, 55);
     width: 500px;
